<resources>
    <string name="app_name">Story App</string>
    <string name="input_email">Masukan Email</string>
    <string name="input_name">Masukan Nama</string>
    <string name="email_error_message">Email address is not valid</string>
    <string name="password">Password</string>
    <string name="password_error_message">Password should have min 6 characters</string>
    <string name="register">Daftar</string>
    <string name="login">login</string>
    <string name="text_to_register">New user? Register</string>
    <string name="text_to_login">Already have an account?</string>
    <string name="image_description">image</string>
    <string name="text_primary">primay text</string>
    <string name="text_subtitle">subtitle test</string>
    <string name="add_story">Add Story</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="title_detail">Detail Story</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="description_empty">Description tidak boleh kosong</string>
    <string name="data_empty">Data empty</string>
    <string name="retry">Retry</string>
    <string name="map_icon">Map Icon\n</string>
    <string name="yourLocation">Lokasi Anda</string>
    <string name="story_location">Story Location</string>
</resources>