<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addStory.AddStoryActivity">

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cameraButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_image"
        android:contentDescription="@string/image_description" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="41dp"
        android:text="@string/camera"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="@+id/galleryButton"
        app:layout_constraintEnd_toStartOf="@+id/galleryButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/galleryButton" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/gallery"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cameraButton"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_location">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:maxLines="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/upload"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraButton">

            <ImageView
                android:id="@+id/icon_location"
                android:layout_width="37dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/map_icon"
                app:srcCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:maxLines="3"
                android:text="@string/yourLocation" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>